--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "scripts": {
     "test": "mocha"
   },
+  "devDependencies": {
+    "gulp-format-md": "^0.1.10",
+    "mocha": "^3.0.2"
+  },
   "keywords": [
     "exec",
     "match",
@@ -29,10 +33,6 @@
     "regular expression",
     "test"
   ],
-  "devDependencies": {
-    "gulp-format-md": "^0.1.10",
-    "mocha": "^3.0.2"
-  },
   "verb": {
     "toc": false,
     "layout": "default",
@@ -44,8 +44,8 @@
     ],
     "related": {
       "list": [
-        "to-regex",
-        "regex-cache"
+        "regex-cache",
+        "to-regex"
       ]
     },
     "reflinks": [
