--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "regex-not",
   "description": "Create a javascript regular expression for matching everything except for the given string.",
-  "version": "0.1.2",
+  "version": "1.0.0",
   "homepage": "https://github.com/jonschlinkert/regex-not",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
   "repository": "jonschlinkert/regex-not",
@@ -18,6 +18,9 @@
   },
   "scripts": {
     "test": "mocha"
+  },
+  "dependencies": {
+    "extend-shallow": "^2.0.1"
   },
   "devDependencies": {
     "gulp-format-md": "^0.1.10",
