--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "test": "mocha"
   },
   "dependencies": {
-    "extend-shallow": "^2.0.1"
+    "extend-shallow": "^3.0.2",
+    "safe-regex": "^1.1.0"
   },
   "devDependencies": {
-    "gulp-format-md": "^0.1.10",
-    "mocha": "^3.0.2"
+    "gulp-format-md": "^1.0.0",
+    "mocha": "^3.5.3"
   },
   "keywords": [
     "exec",
